# CSCI-544-Final-Project

./: .gitignore  CMakeLists.txt  Final Presentation.pptx  LICENSE  README.md  citations.bib  exampleCmake.txt  final-paper.tex
final/: ArcCam.cpp  ArcCam.hpp  CMakeLists.txt  cmake_install.cmake  final  main.cpp  scenebasic.cpp  scenebasic.h
final/shader/: basic.frag.glsl  basic.tcs.glsl  basic.tes.glsl  basic.vert.glsl
ingredients/: CMakeLists.txt  cmake_install.cmake  random.h  scene.h  scenerunner.h
src/: main.cpp
src/GLFW/lib/pkgconfig/: glfw3.pc
src/GLM/lib/cmake/glm/: glmConfig.cmake
src/ingredients/: scenerunner.h
src/shader/: basic.vert.glsl
